--- a/views/availableNumbers.jade
+++ b/views/availableNumbers.jade
@@ -17,4 +17,5 @@ block content
               td
                 form(name='purchaseNumber', action='/lead-source', method='POST')
                   input(type='hidden', name='phoneNumber', value="#{number.phone_number}")
+                  input(type='hidden', name='_csrf', value="#{csrftoken}")
                   input(type='submit', value='Purchase').btn.btn-sm.btn-primary
